[KMessageBox] Fix minimum dialog size when details are requested

QLabel with wordWrap enabled still needs the minimumSize workaround,
which conflicts with the dialog setting its own minimumSize.

Test Plan

.bin/kmessageboxtest 12: When clicking the "Details >>" button, the
dialog window now resizes to show the details.

BUG: 401466
FIXED-IN: 5.54.0

Reviewed by: ngraham, dhaumann

Differential Revision: https://phabricator.kde.org/D17495